# healthapp

./: .editorconfig  .gitignore  CLAUDE.md  NUL  PLANO_COMPLETO.md  kubb.config.ts  package-lock.json  package.json  tsconfig.base.json
backend/: .env.example  CLAUDE.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  docker-compose.dev.yml  locustfile.py  pyproject.toml
backend/.github/workflows/: backend-ci.yml
backend/apps/appointments/: admin.py  apps.py  models.py  policies.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/appointments/migrations/: 0001_initial.py  0002_initial.py  0003_week4_status_and_reminders.py
backend/apps/appointments/tests/: factories.py  test_models.py  test_policies.py  test_serializers.py  test_services.py  test_tasks.py  test_transitions.py  test_views.py
backend/apps/convenios/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/convenios/migrations/: 0001_initial.py
backend/apps/convenios/tests/: factories.py  (+4 more)
backend/apps/core/: admin.py  admin_serializers.py  admin_services.py  admin_urls.py  admin_views.py  apps.py  exceptions.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  services.py  throttles.py  utils.py
backend/apps/doctors/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/notifications/: admin.py  apps.py  filters.py  helpers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/payments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/config/: celery.py  firebase.py  urls.py
backend/config/settings/: base.py  development.py  production.py  staging.py
backend/docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
backend/requirements/: base.txt  development.txt  production.txt  staging.txt
backend/scripts/: setup_load_test.py
backend/tests/: test_e2e_booking_flow.py  test_rbac.py  test_week3_prevalidation.py
(+387 files in other folders)
