[project]
name = "healthapp-backend"
version = "1.0.0"
description = "HealthApp Backend API — Django 6.0.2 + DRF"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps", "config"]
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "DJ",   # flake8-django
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
]
ignore = [
    "S101",   # assert used (OK in tests)
    "S105",   # hardcoded password (OK in settings)
    "S106",   # hardcoded password (OK in settings)
    "DJ001",  # null=True on CharField (sometimes needed)
]

[tool.ruff.lint.per-file-ignores]
"apps/core/management/commands/seed_data.py" = ["S311", "DTZ011", "F841", "B007"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = "(^|.*[\\\\/])(migrations|tests)([\\\\/].*)?$"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--reuse-db",
    "--strict-markers",
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "*/apps.py",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
